# gtest_coverage_cmake

./: CMakeLists.txt  README.md
.github/workflows/: blank.yml
src/: math.cpp
test/: test_math.cpp
